// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with ProgressBar props 1`] = `
Object {
  "aria-valuemax": 100,
  "aria-valuemin": 0,
  "aria-valuenow": 50,
  "children": <ForwardRef
    className="css-t8hyq8 css-1pwrqjj css-r2g4ka fp-Box fp-ProgressBarIndicator"
  />,
  "className": "css-1ssdaqa css-1pwrqjj css-r2g4ka fp-Box fp-ProgressBar",
  "role": "progressbar",
}
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-3 {
  color: #574feb !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #eeedfd;
}

.emotion-2 {
  height: 100%;
  background-color: #574feb;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 test fp-Box fp-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 test fp-Box fp-ProgressBarIndicator"
  />
</div>
`;

exports[`overrides ProgressBar.Indicator.root should render correctly 1`] = `
.emotion-3 {
  color: #574feb !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #eeedfd;
}

.emotion-2 {
  height: 100%;
  background-color: #574feb;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.emotion-2 {
  background-color: red;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 fp-Box fp-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-ProgressBarIndicator"
  />
</div>
`;

exports[`overrides ProgressBar.root should render correctly 1`] = `
.emotion-3 {
  color: #574feb !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 100%;
  background-color: #574feb;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #eeedfd;
}

.emotion-4 {
  background-color: red;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 fp-Box fp-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-3 {
  color: #574feb !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #eeedfd;
}

.emotion-2 {
  height: 100%;
  background-color: #574feb;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 fp-Box fp-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-3 {
  color: #574feb !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #eeedfd;
}

.emotion-2 {
  height: 100%;
  background-color: #574feb;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 fp-Box fp-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly with maxValue 1`] = `
.emotion-3 {
  color: #574feb !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #eeedfd;
}

.emotion-2 {
  height: 100%;
  background-color: #574feb;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 33.33333333333333%;
}

<div
  aria-valuemax="150"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 fp-Box fp-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly with size 1`] = `
.emotion-3 {
  color: #574feb !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 100%;
  background-color: #574feb;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #eeedfd;
  height: 2rem;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 fp-Box fp-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-ProgressBarIndicator"
  />
</div>
`;

exports[`theming ProgressBar.Indicator.root should render correctly 1`] = `
.emotion-3 {
  color: #574feb !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #eeedfd;
}

.emotion-2 {
  height: 100%;
  background-color: #574feb;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.emotion-2 {
  background-color: red;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 fp-Box fp-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-ProgressBarIndicator"
  />
</div>
`;

exports[`theming ProgressBar.root should render correctly 1`] = `
.emotion-3 {
  color: #574feb !important;
}

.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 100%;
  background-color: #574feb;
  -webkit-transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  transition: width 300ms cubic-bezier(0.4,0,0.2,1) 0ms;
  width: 50%;
}

.emotion-4 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: #eeedfd;
}

.emotion-4 {
  background-color: red;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-4 emotion-0 emotion-3 fp-Box fp-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-ProgressBarIndicator"
  />
</div>
`;
